index.css
/* ... */
@media (max-width: 991px) {
  .u-section-8 .u-sheet-1 {
    min-height: 1398px;
  }

  .u-section-8 .u-text-1 {
    width: auto;
    margin-right: 185px;
    margin-left: auto;
  }

  .u-section-8 .u-list-1 {
    width: 516px;
    margin-top: 49px;
    margin-right: 20px;
  }

  .u-section-8 .u-repeater-1 {
    min-height: 246px;
    grid-template-columns: calc(50% - 5px) calc(50% - 5px);
  }

  .u-section-8 .u-text-6 {
    margin-top: 58px;
    margin-left: 311px;
  }

  .u-section-8 .u-text-7 {
    margin-left: 62px;
  }

  .u-section-8 .u-text-8 {
    margin-top: 20px;
    margin-left: 62px;
  }

  .u-section-8 .u-text-9 {
    margin-top: 20px;
    margin-left: 62px;
  }

  .u-section-8 .u-text-11 {
    margin-left: 62px;
  }
}

@media (max-width: 767px) {
  .u-section-8 .u-sheet-1 {
    min-height: 1142px;
  }

  .u-section-8 .u-text-1 {
    margin-right: 139px;
  }

  .u-section-8 .u-list-1 {
    width: 440px;
    margin-top: 21px;
    margin-right: 0;
  }

  .u-section-8 .u-repeater-1 {
    min-height: 263px;
  }

  .u-section-8 .u-text-6 {
    width: auto;
    margin-top: 70px;
    margin-left: auto;
  }

  .u-section-8 .u-text-7 {
    width: auto;
    margin-top: 21px;
    margin-left: 31px;
  }

  .u-section-8 .u-text-8 {
    width: auto;
    margin-top: 0;
    margin-left: 31px;
  }

  .u-section-8 .u-text-9 {
    width: auto;
    margin-top: -336px;
    margin-right: 148px;
    margin-left: auto;
  }

  .u-section-8 .u-text-10 {
    width: auto;
    margin-top: 194px;
  }

  .u-section-8 .u-text-11 {
    margin-top: 31px;
    margin-left: auto;
    margin-bottom: 49px;
  }
}

@media (max-width: 575px) {
  .u-section-8 .u-sheet-1 {
    min-height: 1345px;
  }

  .u-section-8 .u-text-1 {
    margin-right: auto;
    margin-left: 74px;
  }

  .u-section-8 .u-list-1 {
    width: 287px;
    margin-right: 19px;
  }

  .u-section-8 .u-repeater-1 {
    min-height: 292px;
  }

  .u-section-8 .u-text-7 {
    margin-left: 34px;
  }

  .u-section-8 .u-text-8 {
    margin-right: 44px;
    margin-left: 34px;
  }

  .u-section-8 .u-text-9 {
    margin-right: auto;
    margin-left: 34px;
  }

  .u-section-8 .u-text-11 {
    margin-left: 34px;
    margin-right: 34px;
  }
} .u-section-9 {
  background-image: none;
}

.u-section-9 .u-sheet-1 {
  min-height: 500px;
}

.u-section-9 .u-btn-1 {
  letter-spacing: 1px;
  border-style: none;
  font-weight: 700;
  text-transform: uppercase;
  background-image: none;
  margin: 91px auto 0;
}

.u-section-9 .u-icon-1 {
  color: rgb(0, 0, 0) !important;
}

.u-section-9 .u-btn-2 {
  letter-spacing: 1px;
  border-style: none;
  font-weight: 700;
  text-transform: uppercase;
  background-image: none;
  margin: 20px auto 0;
}

.u-section-9 .u-icon-2 {
  color: rgb(0, 0, 0) !important;
}

.u-section-9 .u-btn-3 {
  letter-spacing: 1px;
  border-style: none;
  font-weight: 700;
  text-transform: uppercase;
  background-image: none;
  margin: 20px auto 0;
}

.u-section-9 .u-icon-3 {
  color: rgb(0, 0, 0) !important;
}

.u-section-9 .u-btn-4 {
  letter-spacing: 1px;
  border-style: none;
  font-weight: 700;
  text-transform: uppercase;
  background-image: none;
  margin: 20px auto 0;
}

.u-section-9 .u-icon-4 {
  color: rgb(0, 0, 0) !important;
}

.u-section-9 .u-btn-5 {
  letter-spacing: 1px;
  border-style: none;
  font-weight: 700;
  text-transform: uppercase;
  background-image: none;
  margin: 20px auto 60px;
}

.u-section-9 .u-icon-5 {
  color: rgb(0, 0, 0) !important;
}

